Closed Bug 1854900 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::net::Http2Session::ReadTimeoutTick]

Categories

(Core :: Networking: HTTP, defect, P1)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox118 --- unaffected
firefox119 + fixed
firefox120 --- fixed

People

(Reporter: gsvelto, Assigned: kershaw)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged][necko-priority-queue])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/36a6b3eb-e7c3-4cf4-a2af-2f7050230925

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  mozilla::net::Http2Session::ReadTimeoutTick  netwerk/protocol/http/Http2Session.cpp:371
1  xul.dll  mozilla::net::nsHttpConnection::ReadTimeoutTick  netwerk/protocol/http/nsHttpConnection.cpp:1221
1  xul.dll  mozilla::net::ConnectionEntry::TimeoutTick  netwerk/protocol/http/ConnectionEntry.cpp:739
1  xul.dll  mozilla::net::nsHttpConnectionMgr::TimeoutTick  netwerk/protocol/http/nsHttpConnectionMgr.cpp:3402
1  xul.dll  mozilla::net::nsHttpConnectionMgr::Observe  netwerk/protocol/http/nsHttpConnectionMgr.cpp:313
2  xul.dll  nsTimerImpl::Fire::<lambda_13>::operator const  xpcom/threads/nsTimerImpl.cpp:678
2  xul.dll  mozilla::detail::VariantImplementation<unsigned char, 2, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback>::matchN  mfbt/Variant.h:309
2  xul.dll  mozilla::detail::VariantImplementation<unsigned char, 1, nsCOMPtr<nsITimerCallback>, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback>::matchN  mfbt/Variant.h:318
2  xul.dll  mozilla::detail::VariantImplementation<unsigned char, 0, nsTimerImpl::UnknownCallback, nsCOMPtr<nsITimerCallback>, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback>::matchN  mfbt/Variant.h:318
2  xul.dll  mozilla::Variant<nsTimerImpl::UnknownCallback, nsCOMPtr<nsITimerCallback>, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback>::matchN  mfbt/Variant.h:902

This crash seems to have been introduced by bug 1784261. A very quick glance at the code suggests that mConnection might be NULL.

Assignee: nobody → kershaw
Severity: -- → S3
Priority: -- → P1
Whiteboard: [necko-triaged][necko-priority-queue]
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9d39fae8356d Add null check for mConnection, r=necko-reviewers,valentin

[Tracking Requested - why for this release]:

Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch

Comment on attachment 9354844 [details]
Bug 1854900 - Add null check for mConnection, r=#necko

Beta/Release Uplift Approval Request

  • User impact if declined: Possible crash.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: N/A
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This patch only adds a null check.
  • String changes made/needed: N/A
  • Is Android affected?: Yes
Attachment #9354844 - Flags: approval-mozilla-beta?

Set release status flags based on info from the regressing bug 1784261

Comment on attachment 9354844 [details]
Bug 1854900 - Add null check for mConnection, r=#necko

Approved for 119.0b2

Attachment #9354844 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: