Bug 1854900 - Add null check for mConnection, r=necko-reviewers,valentin, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D189102