netwerk/protocol/http/Http2Session.cpp
@@ -368,7 +368,9 @@ uint32_t Http2Session::ReadTimeoutTick(PRIntervalTime now) {
          this, pingTimeout));
     if ((now - mPingSentEpoch) >= pingTimeout) {
       LOG3(("Http2Session::ReadTimeoutTick %p Ping Timer Exhaustion\n", this));
-      mConnection->SetCloseReason(ConnectionCloseReason::IDLE_TIMEOUT);
+      if (mConnection) {
+        mConnection->SetCloseReason(ConnectionCloseReason::IDLE_TIMEOUT);
+      }
       mPingSentEpoch = 0;
       if (isTrr) {
         // These must be set this way to ensure we gracefully restart all
